@@ -30,7 +30,7 @@ defined('PREVENT_DIRECT_ACCESS') OR exit('No direct script access allowed');
  * @package LavaLust
  * @author Ronald M. Marasigan <ronald.marasigan@yahoo.com>
  * @copyright Copyright 2020 (https://techron.info)
- * @version Version 1.2
+ * @since Version 1
  * @link https://lavalust.com
  * @license https://opensource.org/licenses/MIT MIT License
  */
